--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,6 +17,17 @@ jobs:
       - name: Sphinx build
         run: |
           sphinx-build docs/source _build
+
+      - name: Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: _build/
+          retention-days: 1
+          if-no-files-found: error
+          compression-level: 6
+          overwrite: false
+          include-hidden-files: false
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
