--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -14,37 +14,28 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme
-      - name: Sphinx build
+      - name: Run Sphinx
         run: |
           sphinx-build docs/source _build
 
-      - name: Artifact
-        uses: actions/upload-artifact@v4
+      - name: Create Github Pages artifact
+        uses: actions/upload-pages-artifac@v3
         with:
-          name: github-pages
           path: _build/
-          retention-days: 1
-          if-no-files-found: error
-          compression-level: 6
-          overwrite: false
-          include-hidden-files: false
-  # Deploy job
+          
   deploy:
-    # Add a dependency to the build job
     needs: build
+    runs-on: ubuntu-latest
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write      # to deploy to Pages
       id-token: write   # to verify the deployment originates from an appropriate source
 
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
